[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vp-circles"
version = "0.1.0"
description = "Valeriepieris circle analysis on 2D population rasters"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Hu Peng" }]
license = {text="MIT"}
dependencies = [
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["vp_circles"]
